<resources>
    <string name="app_name">Mis eventos</string>
    <string name="title_activity_maps">Map</string>
    <string name="seleccionar_fecha">Seleccionar fecha</string>
    <string name="seleccionar_hora">Seleccionar hora</string>
    <string name="anadir_evento">Añadir Evento</string>
    <string name="mis_eventos">Mis eventos</string>
    <string name="lista_de_eventos">Lista de eventos</string>
    <string name="nombre_del_evento">Nombre del evento</string>
    <string name="cena_con_amigos">Cena con amigos</string>
    <string name="lugar_del_evento">Lugar del evento</string>
    <string name="madrid">Madrid</string>
</resources>