<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerVertical="true"
    android:layout_margin="20dp"
    android:orientation="vertical"
    tools:context=".NamePlace">


    <TextView
        android:id="@+id/nameTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="40dp"
        android:fontFamily="cursive"
        android:text="@string/nombre_del_evento"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/nameET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="cursive"
        android:hint="@string/cena_con_amigos"
        android:inputType="text"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/placeTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="40dp"
        android:fontFamily="cursive"
        android:text="@string/lugar_del_evento"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/placeET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="cursive"
        android:hint="@string/madrid"
        android:inputType="text"
        android:textSize="30sp" />

    <Button
        android:id="@+id/addBT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="50dp"
        android:text="@string/anadir_evento" />

</LinearLayout>