<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/dateBT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:text="@string/seleccionar_fecha" />

    <TextView
        android:id="@+id/dateET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/dateBT"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:fontFamily="cursive"
        android:textAlignment="center"
        android:textSize="30sp" />


    <Button
        android:id="@+id/timeBT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/dateET"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="100dp"
        android:text="@string/seleccionar_hora" />


    <TextView
        android:id="@+id/timeET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/timeBT"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:fontFamily="cursive"
        android:textAlignment="center"
        android:textSize="30sp" />

    <Button
        android:id="@+id/eventBT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="40dp"
        android:text="@string/anadir_evento" />


</RelativeLayout>